--- a/content/posts/controlling-element-visibility-with-the-intersection-observer-api.mdx
+++ b/content/posts/controlling-element-visibility-with-the-intersection-observer-api.mdx
@@ -8,13 +8,7 @@ description: >-
 tags:
   - javascript
 ---
-Controlling the display of elements based on their visibility within the viewport has typically been a rather messy affair, involving calculations using window height and `getBoundingClientRect()`. There is now a new API that makes this much simpler called Intersection Observer. It is now [supported](https://caniuse.com/#feat=intersectionobserver) in Chrome, Firefox, Opera and Edge and there is a good [polyfill](https://github.com/w3c/IntersectionObserver/tree/gh-pages/polyfill) for it.
-
-I decided to experiment and push IntersectionObserver to its limits.
-
-<Note type="warning">
-  You probably shouldn’t create as many observers on a production site as I have done. You start to run into performance issues. However, this experiment should help you visualize how the API works.
-</Note>
+Controlling the display of elements based on their visibility within the browser viewport has typically been a rather messy affair, involving calculations using window height and `getBoundingClientRect()`. There is now a new API called Intersection Observer that makes this much simpler. It is now [supported](https://caniuse.com/#feat=intersectionobserver) in Chrome, Firefox, Opera and Edge.
 
 ## The HTML and CSS
 
@@ -25,7 +19,6 @@ I have a simple grid of cards that is styled using CSS grid:
   <div class="card"></div>
   <div class="card"></div>
   <div class="card"></div>
-  ...
 </section>
 ```
 
@@ -42,14 +35,14 @@ I have a simple grid of cards that is styled using CSS grid:
 
 ## Creating the Intersection Observers
 
-I loop over each card and create an observer. The observer accepts a callback and an options object. Note that in options I am setting the `rootMargin` to a negative value. This insets the intersection point in from the viewport on all sides by 100px. So a card can be up to 100px in the viewport before the observer will read it as intersected.
+I loop over each card and create an observer. The observer accepts a callback and an options object. Note that in `options` I am setting the `rootMargin` to a negative value. This insets the intersection point in from the viewport on all sides by 100px. So a card can be up to 100px in the viewport before the observer will read it as intersected.
 
 <figure>
-  <img src="../../assets/root-margin.png" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/root-margin.png" alt=""/>
+  <figcaption>The root margin grows or shrinks from each side of the root element’s bounding box before computing intersections.</figcaption>
 </figure>
 
-I have also set the `threshold` option as an array with two numeric values. These are essentially the percentages of intersection at which the observer will respond. So, when a card is 50% in the viewport and when it is 100% in, the observer will fire the callback.
+I have also set the `threshold` option as an array with two numeric values. These are the percentages of intersection at which the observer will respond. So, when a card is 50% and 100% in the viewport, the observer will execute the callback.
 
 ```javascript
 const options = {
@@ -67,11 +60,11 @@ targets.forEach(target => observer.observe(target));
 
 ## Setting Up the Callback
 
-The callback function gives me an array of entries – each entry is essentially an intersection change. I can check the `intersectionRatio` on each entry and apply some styling appropriately.
+The callback function gives me an array of entries, in which each entry represents an intersection change. I can check the `intersectionRatio` on each entry and apply some styling appropriately.
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/thresholds.png" alt=""/>
+  <figcaption>Thresholds indicate at what percentage of the target’s visibility the observer’s callback should be executed.</figcaption>
 </figure>
 
 ```javascript
