--- a/content/posts/unlocking-the-benefits-of-css-custom-properties.mdx
+++ b/content/posts/unlocking-the-benefits-of-css-custom-properties.mdx
@@ -4,20 +4,20 @@ slug: unlocking-the-benefits-of-css-custom-properties
 date: 2017-10-24T20:17:00.000Z
 title: Unlocking the Benefits of CSS Variables
 description: >-
-  An overview of the benefits of CSS variables and helpful tips and tricks for working with them.
+  An overview of the benefits of CSS variables and helpful tips for working with them.
 tags:
   - css
   - theming
 ---
-More and more developers are starting to use CSS variables, or as they are more correctly known, custom properties. Native CSS custom properties provide several clear benefits over preprocessor variables. They provide the power to achieve things like live theming which were previously much more difficult.
+More developers are starting to use CSS variables, or as they are more correctly known, custom properties. Native CSS custom properties provide several clear benefits over preprocessor variables. They provide the power to achieve things like live theming which were previously much more difficult.
 
-I want to take a quick look at the benefits of CSS *custom properties* and go over some lesser known features that may come in handy.
+I will take a quick look at the benefits of CSS custom properties and go over some lesser known features that may come in handy.
 
 ## Benefits of CSS Custom Properties
 
 ### They’re Native
 
-This one is obvious, but important. You can use CSS custom properties without the need for a preprocessor. The tooling around CSS has grown in complexity over the last several years. We may now be looking at a simplification as more features are adopted into CSS proper.
+This one is obvious, but important. You can use CSS custom properties without the need for a preprocessor. The tooling around CSS has grown in complexity over the last several years. We may now be looking at a simplification as more features are adopted into vanilla CSS.
 
 ### They’re Live
 
@@ -48,7 +48,7 @@ Here we are redefining a grid gutter within a media query and using that custom 
 
 ### They Cascade
 
-Since preprocessor variables don’t run in the browser, they have no knowledge of the DOM. Therefore they cannot be scoped to DOM elements. CSS custom properties, on the other hand, do have this knowledge. CSS custom properties can be scoped to particular elements, or classes on elements.
+Since preprocessor variables don’t run in the browser, they have no knowledge of the DOM. Therefore they cannot be scoped to DOM elements. CSS custom properties, on the other hand, do have this knowledge. CSS custom properties can be scoped to particular elements or selectors.
 
 A clear use case for this is theme switching:
 
@@ -91,7 +91,6 @@ If you aren’t sure if a particular custom property exists, you can provide a d
 Simply pass in the default value as the second argument of the `var()` function:
 
 ```css
-/* single fallback */
 .button {
   background-color: var(--button-background-color, gray);
 }
@@ -100,7 +99,6 @@ Simply pass in the default value as the second argument of the `var()` function:
 You can provide multiple fallbacks by nesting multiple `var()` functions inside of each other:
 
 ```css
-/* multiple fallbacks */
 .button-primary {
   background-color: var(
     --primary-button-background-color,
@@ -177,9 +175,5 @@ Remember that you can redefine custom properties within media queries. Margins, 
   padding: var(--card-padding);
 }
 ```
-
-## Get Started with a CSS Custom Property-Based Framework
-
-My new [CSS framework HiQ](https://jonathanharrell.github.io/hiq/) lets you get started quickly by providing custom properties that you can customize. HiQ is lightweight and provides truly fluid typography that changes in relation to the viewport width.
 
 Learn how to use custom properties to enable live theming in [my article here](/blog/live-theming-with-css-variables).
