--- a/content/posts/advanced-css-only-form-styling.mdx
+++ b/content/posts/advanced-css-only-form-styling.mdx
@@ -4,34 +4,34 @@ slug: advanced-css-only-form-styling
 date: 2017-10-31T20:17:00.000Z
 title: Advanced CSS-Only HTML Form Styling
 description: >-
-  Learn about selectors both new and old that you can use to style form inputs based on requirement, validity and more.
+  Learn about selectors both old and new that you can use to style form inputs based on requirement, validity and more.
 tags:
   - css
   - forms
   - html
 ---
-HTML form inputs have always been notoriously difficult to style with CSS, but there are several little-used selectors that give us significant power to style inputs and surrounding elements. Some of these are relatively new, while others have been available for quite some time.
+HTML form inputs have been notoriously difficult to style with CSS, but there are several selectors that give us significant power to style inputs and surrounding elements. Some of these are relatively new, while others have been available for years.
 
 ## :placeholder-shown
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/placeholder-shown.png" alt=""/>
+  <figcaption>A placeholder is shown within an input and then moved above it when a user starts typing</figcaption>
 </figure>
 
 The first selector is relatively new and doesn’t have complete [browser support](https://caniuse.com/#feat=css-placeholder-shown) yet. However, this seems like something that could easily work as a progressive enhancement. The selector allows us to detect whether a placeholder is currently visible to the user. This could come in handy if we want to dynamically hide and show the input’s associated label.
 
-Here I am hiding the label until the user types in the input, thus hiding the placeholder. I use a nice transition effect to display the label. Note that for this to work, the label must come AFTER the input.
+Here I am hiding the label until the user types into the input, thus hiding the placeholder. I then use a transition effect to display the label. Note that for this to work, the label must come *after* the input.
 
 ```html
 <div class="form-group">
   <input
     type="text"
     id="dynamic-label-input"
-    placeholder="Enter some text"
+    placeholder="First and last name"
   >
   <label for="dynamic-label-input">
-    Enter some text
+    First and last name
   </label>
 </div>
 ```
@@ -59,105 +59,124 @@ input:placeholder-shown + label {
 ## :required
 
 <figure>
-  <img src="../../assets/required.png" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/required.png" alt=""/>
+  <figcaption>Required inputs can be styled to show a required message beneath them</figcaption>
 </figure>
 
-Use this selector to indicate that an input has the `required` attribute. Here I am using an empty `.help-text` span and placing some content dynamically using the `::before` pseudo-element. Realistically, this would be done with JavaScript, but I am including here to demonstrate a pure CSS approach.
+Use this selector to indicate that an input has the `required` attribute. Here I am using an empty `.help-text` paragraph and placing some content dynamically using the `::before` pseudo-element. Realistically, this would be done with JavaScript, but I am including it here to demonstrate a pure CSS approach.
 
 ```html
-<label for="required-input">Required input</label>
+<label for="required-input">Input label</label>
 <input type="text" id="required-input" required>
-<span class="help-text"></span>
+<p class="help-text"></p>
 ```
 
 ```css
 input:required + .help-text::before {
-  content: '*Required';
+  content: 'This input is required';
 }
 ```
 
 ## :optional
 
 <figure>
-  <img src="../../assets/optional.png" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/optional.png" alt=""/>
 </figure>
 
-This selector does the opposite of `:required`. I am again using an empty `.help-text` `span` to display some optional text if the required attribute is NOT present.
+This selector does the opposite of `:required`. I am again using an empty `.help-text` paragraph to display some optional text if the `required` attribute is *not* present.
 
 ```css
 input:optional + .help-text::before {
-  content: '*Optional';
+  content: 'optional';
 }
 ```
 
 ## :disabled
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/disabled.png" alt=""/>
 </figure>
 
-This one should be familiar to most of you, but still important to remember. It’s pretty essential to display whether or not an input is disabled to a user.
+This one should be familiar to most of you, but still important to remember. It’s pretty essential to display whether or not an input is disabled for a user.
+
+```html
+<label for="disabled-input">Input label</label>
+<input type="text" id="disabled-input" disabled>
+```
 
 ```css
-&:disabled {
-  border-color: var(--gray-lighter);
-  background-color: var(--gray-lightest);
+input:disabled {
+  background-color: var(--gray-lighter);
   color: var(--gray-light);
+}
+```
+
+## :enabled
+
+<figure>
+  <img src="../../assets/enabled.png" alt=""/>
+</figure>
+
+This is counterpart to the `:disabled` selector. It will match any inputs without the `disabled` attribute.
+
+```css
+input:enabled {
+  background-color: var(--gray-light);
+  color: var(--gray-dark);
 }
 ```
 
 ## :read-only
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/read-only.png" alt=""/>
 </figure>
 
-An input with the `readonly` attribute should convey a slightly different meaning than a disabled input. Thankfully we have this selector to help with that.
+An input with the `readonly` attribute has a slightly different meaning than a disabled input. Such inputs are technically enabled, but their values cannot be altered by the user. Thankfully we have a selector to help with that.
 
 ```html
-<input type="text" value="Read-only value" readonly>
+<label for="read-only-input">Input label</label>
+<input
+  type="text"
+  id="read-only-input"
+  value="Read-only value"
+  readonly
+>
 ```
 
 ```css
 input:read-only {
-  border-color: var(--gray-lighter);
+  border-color: var(--gray-light);
   color: var(--gray);
   cursor: not-allowed;
 }
 ```
 
-## :valid
+## :read-write
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/read-write.png" alt=""/>
 </figure>
 
-While much form validation will happen with JavaScript, we are able to take advantage of HTML form validation and style inputs accordingly. This selector gives us the chance to style any input which is currently passing the native browser validation rules.
-
-Here I am encoding an svg to display a checkbox in the input using the `background-image` property.
+This is the counterpart to the `:read-only` selector. It will match any inputs without the `readonly` attribute.
 
 ```css
-input:valid {
-  border-color: var(--color-primary);
-  background-image: url("data:image/svg+xml,...");
+input:read-write {
+  background-color: var(--gray-light);
+  color: var(--gray-dark);
 }
 ```
 
 ## :invalid
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/invalid.png" alt=""/>
+  <figcaption>Invalid inputs can be styled to visually display an error state</figcaption>
 </figure>
 
-This selector checks if an input is currently NOT passing the native browser validation rules (for example, if an email input does not contain a real email).
+While much form validation will happen with JavaScript, we are able to take advantage of HTML form validation and style inputs accordingly. This selector checks if an input is currently *not* passing the native browser validation rules (for example, if an email input does not contain a real email).
 
-Again, I am encoding an svg to display an ‘x’ in the input.
+Here I am encoding an SVG to display an `x` in the input using the `background-image` property.
 
 ```css
 input:invalid {
@@ -166,31 +185,69 @@ input:invalid {
 }
 ```
 
-I can also customize some validation messages for each input type using the `.help-text` span and the `::before` pseudo-element.
+I can also customize some validation messages for each input type using the `.help-text` `span` and the `::before` pseudo-element.
 
 ```html
-<label for="invalid-email">Invalid input</label>
+<label for="invalid-email">Input label</label>
 <input type="email" id="invalid-email" value="notanemail">
 <span class="help-text"></span>
 ```
 
 ```css
 input[type='email']:invalid + .help-text::before {
-  content: 'You must enter a valid email.'
+  content: 'You must enter a valid email'
 }
 ```
 
-## :in-range/:out-of-range
+## :user-invalid
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/user-invalid.png" alt=""/>
+  <figcaption>An input is only considered user invalid after the user has interacted with it</figcaption>
 </figure>
 
-These selectors detect whether the value of a number input is within the min/max values specified or not.
+This selector matches an element with incorrect input, but only after the user has interacted with it. The [browser support](https://caniuse.com/mdn-css_selectors_user-invalid) for this is currently limited.
 
 ```html
-<label for="out-of-range-input">Out-of-range input</label>
+<label for="user-invalid-email">Input label</label>
+<input type="email" id="user-invalid-email" value="notanemail">
+<span class="help-text"></span>
+```
+
+```css
+input[type='email']:user-invalid + .help-text::before {
+  content: 'You must enter a valid email'
+}
+```
+
+## :valid
+
+<figure>
+  <img src="../../assets/valid.png" alt=""/>
+  <figcaption>Valid inputs can be styled with a success state, such as a check box, letting users know that these inputs have been successfully filled in</figcaption>
+</figure>
+
+This selector matches any input which is currently passing the native browser validation rules.
+
+Again, I am encoding an SVG to display a check mark in the input.
+
+```css
+input:valid {
+  border-color: var(--color-success);
+  background-image: url("data:image/svg+xml,...");
+}
+```
+
+## :out-of-range
+
+<figure>
+  <img src="../../assets/out-of-range.png" alt=""/>
+</figure>
+
+This selector detects whether the value of a number input is within the specified min/max values or not.
+
+```html
+<label for="out-of-range-input">Input label</label>
 <input
   type="number"
   id="out-of-range-input"
@@ -207,30 +264,56 @@ input:out-of-range + .help-text::before {
 }
 ```
 
+## :in-range
+
+<figure>
+  <img src="../../assets/in-range.png" alt=""/>
+</figure>
+
+This is the counterpart to the `:out-of-range` selector. It will match inputs whose number values are within their defined ranges.
+
+```html
+<label for="in-range-input">Input label</label>
+<input
+  type="number"
+  id="in-range-input"
+  min="1"
+  max="10"
+  value="5"
+>
+<span class="help-text">(value must be between 1 and 10)</span>
+```
+
+```css
+input:in-range + .help-text::before {
+  content: 'In range';
+}
+```
+
 ## :checked
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/checked.png" alt=""/>
+  <figcaption>A checked checkbox is styled through the use of pseudo-elements.</figcaption>
 </figure>
 
 Most of you will be familiar with this selector. It gives us the ability to apply custom styles to checkboxes and radio buttons when checked. My technique for styling checkboxes involves creating a wrapper element and placing the `label` after the `input`.
 
-I visually hide the input so that it disappears from view but is still clickable. Then I style `label::before` to look like the checkbox input and `label::after` to look like a checkmark. I use the `:checked` selector to style these two pseudo-elements appropriately:
+I visually hide the input so that it disappears from view but is still clickable. Then I style `label::before` to look like the checkbox input and `label::after` to look like a checkmark. I use the `:checked` selector to style these two pseudo-elements appropriately.
 
 ```html
 <div class="checkbox">
   <input type="checkbox"/>
-  <label>Option</label>
+  <label>Option 1</label>
 </div>
 ```
 
 ```css
-&:checked + label::before {
+.checkbox input:checked + label::before {
   background-color: var(--color-primary);
 }
 
-&:checked + label::after {
+.checkbox input:checked + label::after {
   display: block;
   position: absolute;
   top: 0.2rem;
@@ -244,8 +327,67 @@ I visually hide the input so that it disappears from view but is still clickable
 }
 ```
 
-## Getting a Head Start with the HiQ Framework
+## :default
 
-My new [CSS framework HiQ](https://jonathanharrell.github.io/hiq/) provides some useful base styling for HTML form inputs, including checkboxes, radio buttons, and disabled inputs.
+<figure>
+  <img src="../../assets/default.png" alt=""/>
+  <figcaption>The default within a set of choices can be visually distinguished</figcaption>
+</figure>
 
-HiQ is lightweight and is built with CSS variables that can be changed dynamically, especially useful for theme switching.
+This selector matches checkboxes that have the `checked` attribute. This represents the default selection when the page is loaded.
+
+```html
+<div class="checkbox">
+  <input type="checkbox" checked />
+  <label>Option 1</label>
+</div>
+```
+
+```css
+.checkbox input:default + label {
+  color: var(--color-primary);
+}
+```
+
+## :indeterminate
+
+<figure>
+  <img src="../../assets/indeterminate.png" alt=""/>
+</figure>
+
+This selector matches checkboxes which have had their `indeterminate` attribute set to `true` via JavaScript. JavaScript is the only way in which this attribute can be set. This attribute communicates an indeterminate state, neither on nor off.
+
+```javascript
+document.getElementById('option-1').indeterminate = true;
+```
+
+```css
+.checkbox input:indeterminate + label::before {
+  background-color: var(--color-primary);
+}
+
+.checkbox input:indeterminate + label::after {
+  display: block;
+  position: absolute;
+  top: 0.2rem;
+  left: 0.375rem;
+  width: 0.25rem;
+  height: 2px;
+  border: solid white;
+  content: '';
+}
+```
+
+## :autofill
+
+<figure>
+  <img src="../../assets/autofill.png" alt=""/>
+</figure>
+
+This selector matches an input when it has been autofilled by the browser.
+
+```css
+input:autofill {
+  background-color: var(--orange-lighter);
+}
+```
