--- a/content/posts/better-typography-with-font-variants.mdx
+++ b/content/posts/better-typography-with-font-variants.mdx
@@ -48,7 +48,7 @@ Ligatures are single glyphs made from two or more characters. They typically pre
 
 <figure>
   <img src="../../assets/common-ligatures.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: Hoefler Text</figcaption>
 </figure>
 
 These are ligatures that the type designer has decided should be used in normal conditions. In most circumstances you should use these. Most browsers enable them by default.
@@ -62,7 +62,7 @@ font-variant-ligatures: no-common-ligatures;
 
 <figure>
   <img src="../../assets/discretionary-ligatures.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: Hoefler Text</figcaption>
 </figure>
 
 These are ligatures which can be used for typographic purposes, for example to achieve a special effect. These are disabled by default.
@@ -76,7 +76,7 @@ font-variant-ligatures: no-discretionary-ligatures;
 
 <figure>
   <img src="../../assets/contextual-ligatures.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: ??</figcaption>
 </figure>
 
 These are alternate ligatures that are affected by their surrounding context. They often harmonize the shapes of grouped glyphs. These are enabled by default.
@@ -90,7 +90,7 @@ font-variant-ligatures: no-contextual;
 
 <figure>
   <img src="../../assets/historical-ligatures.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: Hoefler Text</figcaption>
 </figure>
 
 These are ligatures which could be considered a subset of discretionary, but are specifically used to achieve a historical effect. These are disabled by default.
@@ -110,7 +110,7 @@ Thankfully, there is now a way to enable true subscripts and superscripts with `
 
 <figure>
   <img src="../../assets/subscript.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: Ideal Sans</figcaption>
 </figure>
 
 This enables true subscript characters.
@@ -124,7 +124,7 @@ font-variant-position: normal; /* disable both variants */
 
 <figure>
   <img src="../../assets/superscript.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: Ideal Sans</figcaption>
 </figure>
 
 This enables true superscript characters.
@@ -142,7 +142,7 @@ A capital is not a capital is not a capital. The most significant use of `font-v
 
 <figure>
   <img src="../../assets/small-caps.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: Hoefler Text</figcaption>
 </figure>
 
 Small caps are designed to be the same height as lowercase letters and are used to capitalize words within running text. They make for a more cohesive and readable paragraph.
@@ -156,7 +156,7 @@ font-variant-caps: normal; /* disable all variants */
 
 <figure>
   <img src="../../assets/all-small-caps.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: Hoefler Text</figcaption>
 </figure>
 
 The `small-caps` value will only replace lowercase letters with small caps. To replace all letters with small caps (which is probably what you want) you need to use `all-small-caps`.
@@ -170,7 +170,7 @@ font-variant-caps: normal; /* disable all variants */
 
 <figure>
   <img src="../../assets/petite-caps.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: EB Garamond</figcaption>
 </figure>
 
 Standard small caps will typically appear slightly larger than the x-height of the font. Some typefaces have additional small caps that match the x-height. These are called `petite-caps`.
@@ -184,7 +184,7 @@ font-variant-caps: normal; /* disable all variants */
 
 <figure>
   <img src="../../assets/all-petite-caps.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: EB Garamond</figcaption>
 </figure>
 
 Similarly to `all-small-caps`, this converts all letters, both lower and uppercase, to petite caps.
@@ -198,7 +198,7 @@ font-variant-caps: normal; /* disable all variants */
 
 <figure>
   <img src="../../assets/unicase.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: Filosofia</figcaption>
 </figure>
 
 This feature maps upper and lowercase letters to a mixed set of lowercase and small capital forms, creating a single case alphabet. Sometimes the small capitals used are actual small cap glyphs and sometimes they are specially designed unicase forms. The implementation of this feature varies greatly from font to font.
@@ -212,7 +212,7 @@ font-variant-caps: normal; /* disable all variants */
 
 <figure>
   <img src="../../assets/titling-caps.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: Hoefler Titling</figcaption>
 </figure>
 
 Standard uppercase letters are designed for use alongside lowercase letters and when they are used in strings of all uppercase letters they can appear too strong. Some fonts include titling capitals specifically for this situation.
@@ -240,7 +240,7 @@ font-variant-numeric: lining-nums tabular-nums;
 
 <figure>
   <img src="../../assets/lining-nums.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: Ideal Sans</figcaption>
 </figure>
 
 Lining numerals approximate capital letters and are uniform in height. They should be used in headings or numeric tables. Usually numbers are lining figures by default.
@@ -254,7 +254,7 @@ font-variant-numeric: normal; /* disable all variants */
 
 <figure>
   <img src="../../assets/oldstyle-nums.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: Ideal Sans</figcaption>
 </figure>
 
 Old-style numerals have varying heights and alignments and are therefore more similar to lowercase letters. They should be used in running text.
@@ -268,7 +268,7 @@ font-variant-numeric: normal; /* disable all variants */
 
 <figure>
   <img src="../../assets/proportional-nums.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: Ideal Sans</figcaption>
 </figure>
 
 Proportional numerals have variable spacing and blend in with horizontal text. They should be used in most situations, other than numeric tables where vertical alignment is important. Usually numbers are proportional figures by default.
@@ -282,7 +282,7 @@ font-variant-numeric: normal; /* disable all variants */
 
 <figure>
   <img src="../../assets/tabular-nums.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: Ideal Sans</figcaption>
 </figure>
 
 Tabular numerals have the same width and should be used in numeric tables to allow vertical alignment of numbers.
@@ -296,7 +296,7 @@ font-variant-numeric: normal; /* disable all variants */
 
 <figure>
   <img src="../../assets/diagonal-fractions.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>Font family: Ideal Sans</figcaption>
 </figure>
 
 By default, fractions will display as lowercase letters with a slash. Proper fractions will be formatted to match the height of a lining figure and can be either diagonal or stacked.
@@ -309,8 +309,8 @@ font-variant-numeric: normal; /* disable all variants */
 ### stacked-fractions
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt=""/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/stacked-fractions.png" alt=""/>
+  <figcaption>Font family: Operator Mono</figcaption>
 </figure>
 
 Stacked fractions are not as common of a feature in most web fonts as diagonal fractions, but should prove useful with heavily scientific or mathematical content.
@@ -323,8 +323,8 @@ font-variant-numeric: normal; /* disable all variants */
 ### ordinal
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/ordinals.png" alt=""/>
+  <figcaption>Font family: Fedra Sans</figcaption>
 </figure>
 
 Ordinals like st, nd, rd, and th will appear as standard lowercase letters by default. However, these should ideally appear as smaller raised numbers following the numeral. The `ordinal` value enables that.
@@ -332,16 +332,13 @@ Ordinals like st, nd, rd, and th will appear as standard lowercase letters by de
 ```css
 font-variant-numeric: ordinal; /* enable */
 font-variant-numeric: normal; /* disable all variants */
-
-font-feature-settings: 'ordn' 1; /* low-level enable */
-font-feature-settings: 'ordn' 0; /* low-level disable */
 ```
 
 ### slashed-zero
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/slashed-zero.png" alt=""/>
+  <figcaption>Font family: Operator Mono</figcaption>
 </figure>
 
 This enables an alternate zero character with a slash through it.
@@ -349,9 +346,6 @@ This enables an alternate zero character with a slash through it.
 ```css
 font-variant-numeric: slashed-zero; /* enable */
 font-variant-numeric: normal; /* disable all variants */
-
-font-feature-settings: 'zero' 1; /* low-level enable */
-font-feature-settings: 'zero' 0; /* low-level disable */
 ```
 
 ## font-variant-alternates
@@ -361,8 +355,8 @@ Fonts can provide a variety of alternates for any character. The `font-variant-a
 ### historical-forms
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/historical-forms.png" alt=""/>
+  <figcaption>Font family: Hoefler Text</figcaption>
 </figure>
 
 Historical alternates can be used for a “period” effect. Note the difference between this and historical ligatures. Historical ligatures are historical character combinations, whereas historical forms are substitutions for individual characters.
@@ -370,9 +364,6 @@ Historical alternates can be used for a “period” effect. Note the difference
 ```css
 font-variant-alternates: historical-forms; /* enable */
 font-variant-alternates: normal; /* disable all variants */
-
-font-feature-settings: 'hist' 1; /* low-level enable */
-font-feature-settings: 'hist' 0; /* low-level disable */
 ```
 
 ### stylistic(feature-value-name)
