--- a/content/posts/better-typography-with-font-variants.mdx
+++ b/content/posts/better-typography-with-font-variants.mdx
@@ -387,8 +387,8 @@ font-variant-alternates: normal; /* disable all variants */
 ### styleset(feature-value-name)
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/styleset.png" alt=""/>
+  <figcaption>Font family: Hoefler Text</figcaption>
 </figure>
 
 Use this to select an entire set of alternative glyphs. The glyphs in a set are often designed to work together. Select a particular set by defining a `font-feature-values` rule using the set’s number.
@@ -407,8 +407,8 @@ font-feature-settings: ss01; /* low-level enable */
 ### character-variant(feature-value-name)
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/character-variant.png" alt=""/>
+  <figcaption>Font family: Hoefler Text</figcaption>
 </figure>
 
 Use this to select specific character variants. Select a particular variant by defining a `font-feature-values` rule using the variant’s number.
@@ -427,8 +427,8 @@ font-feature-settings: cv01; /* low-level enable */
 ### swash(feature-value-name)
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/swash.png" alt=""/>
+  <figcaption>Font family: Hoefler Text</figcaption>
 </figure>
 
 Swashes can be used to provide typographic interest to headings or more artistic settings of text. They are typically exaggerated alternative character designs, or have some sort of typographic flourish. Select a particular swash by defining a `font-feature-values` rule using the set’s number.
@@ -448,8 +448,8 @@ font-feature-settings: swsh 0; /* low-level disable */
 ### ornaments(feature-value-name)
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/ornaments.png" alt=""/>
+  <figcaption>Font family: Hoefler Text</figcaption>
 </figure>
 
 This replaces default glyphs with ornaments, if they are provided in the font.
@@ -469,8 +469,8 @@ font-feature-settings: ornm 0; /* low-level disable */
 ### annotation(feature-value-name)
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+  <img src="../../assets/annotations.png" alt=""/>
+  <figcaption>Font family: Whitney Index</figcaption>
 </figure>
 
 Annotations are notational forms of glyphs (for example, glyphs placed in open or solid circles, squares, parentheses, diamonds, rounded boxes. etc.).
