WIP: fancy callouts

--- a/content/posts/component-variants-with-scoped-css-variables.mdx
+++ b/content/posts/component-variants-with-scoped-css-variables.mdx
@@ -11,7 +11,7 @@ tags:
 ---
 Generating variants of common interface components like buttons, inputs, cards, etc., has typically involved multiple class names, pre-processor mixins, or repeated code. Now, component variants can be created in a clean and straightforward manner using CSS variables.
 
-Let’s take buttons as an example. I want to create a set of different buttons, including common variants like "primary" and "secondary".
+Let’s take buttons as an example. I want to create a set of different buttons, including common variants like “primary” and “secondary”.
 
 <figure>
   <img src="../../assets/component-variants.png" alt=""/>
