--- a/content/posts/live-theming-with-css-variables.mdx
+++ b/content/posts/live-theming-with-css-variables.mdx
@@ -14,16 +14,23 @@ import LiveThemingDemo from "../../src/demos/live-theming";
 
 CSS variables, now enjoying fairly good [browser support](https://caniuse.com/#search=css%20variables), are opening up exciting possibilities for more dynamic styling. Having true CSS variables means that we can get and set their values using JavaScript, allowing us to build exciting features like live theming.
 
+<aside>
+  <p>CSS variables are officially known as <dfn>custom properties</dfn>. Learn more about them.</p>
+</aside>
+
 The process is fairly simple—set up initial variable values in CSS, mark up some inputs, add event listeners and set the values in JavaScript. Let’s get started!
 
 <Figure
-  wide={true}
   caption="An editor for customizing the colors and typography of a layout, built with simple JavaScript and CSS variables."
 >
   <LiveThemingDemo />
 </Figure>
 
 ## Set Up Initial Values
+
+<aside>
+  <p>Learn more about the <i>:root</i> pseudo-class.</p>
+</aside>
 
 First we’ll set up the variables and their initial values in the `:root` pseudo-class. In HTML, `:root` represents the `html` element.
 
@@ -56,8 +63,19 @@ You may also want to add some transitions for the properties that will be changi
 Now it’s time to create the form that the user will be interacting with to customize their theme. I’m using color inputs for the color options and range inputs for the font size and line height.
 
 ```html
-<input type="color" id="background-color" value="#FFFFFF">
-<input type="range" id="base-font-size" min="12" max="16" step="1" value="14">
+<input
+  type="color"
+  id="background-color"
+  value="#FFFFFF"
+>
+<input
+  type="range"
+  id="base-font-size"
+  min="12"
+  max="16"
+  step="1"
+  value="14"
+>
 ```
 
 Set your initial input values to match the starting values of your CSS variables. You could also set these through JavaScript on page load to remain DRY.
