--- a/content/posts/contextual-callouts-with-css-grid.mdx
+++ b/content/posts/contextual-callouts-with-css-grid.mdx
@@ -18,17 +18,17 @@ import GridLayout2 from "../../static/assets/css-grid-layout-2.svg";
 import GridLayout3 from "../../static/assets/css-grid-layout-3.svg";
 import GridLayout4 from "../../static/assets/css-grid-layout-4.svg";
 
-At long last, contextual callouts are possible with CSS grid. Contextual callouts are small paragraphs that sit beside primary text and offer secondary information to a reader. They have long been a feature of books, magazines and other printed materials. I enjoy coming across these small asides while reading, as they add texture and interest to the content.
+At long last, contextual callouts are possible with CSS grid. <dfn>Contextual callouts</dfn> are small paragraphs that sit beside primary text and offer secondary information to a reader. They have long been a feature of books, magazines and other printed materials. I enjoy coming across these small asides while reading, as they add texture and interest to the content.
 
 I've been searching for a while now for a way to bring these to the web with pure CSS. The solutions in the past have typically been fairly messy, requiring complex floats and clearing, or manual absolute positioning. That is changing now, thanks to CSS grid.
 
-<Figure wide={true}>
+<Figure>
   <GridLayout />
 </Figure>
 
 ## The Grid Markup
 
-Say I’m building a blog post template. First, I’ll need a header to contain the title. Then I’ll need the primary blog content, consisting of headings, paragraphs, images, and, callouts. First let’s write some semantic markup:
+Say I’m building a blog post template. First, I’ll need a `header` to contain the title. Then I’ll need the primary blog content, consisting of headings, paragraphs, images, and callouts. First let’s write some semantic markup:
 
 ```html
 <article class="blog-post">
@@ -48,9 +48,17 @@ Say I’m building a blog post template. First, I’ll need a header to contain 
 </article>
 ```
 
-The article element contains the header and all post content as direct children. This will be important as we apply CSS grid styles to the post. Callouts are written using `aside` elements, perfect for content that is connected tangentially to the rest of the document, and appear in the document directly before the paragraph they are connected to. Each `aside` element contains a paragraph of its own.
+<aside>
+  <p>Read the HTML Spec to <a href="https://html.spec.whatwg.org/multipage/sections.html#the-aside-element" target="_blank" aria-label="learn more about the aside element">learn more</a> about the <code>aside</code> element.</p>
+</aside>
+
+The `article` element contains the header and all post content as direct children. This will be important as we apply CSS grid styles to the post. Callouts are written using `aside` elements, perfect for content that is connected tangentially to the rest of the document, and appear in the document directly before the paragraph they are connected to. Note that each `aside` contains a child paragraph of its own.
 
 ## Fallback Styling
+
+<aside>
+  <p><a href="https://www.w3.org/TR/css3-values/#ch" target="_blank" aria-label="Learn more about the ch unit in CSS">Learn more</a> about the <code>ch</code> unit in CSS.</p>
+</aside>
 
 Next, we’ll apply some basic styles for browsers that don’t yet support CSS grid. We’ll set a max-width of 70 characters using the `ch` unit:
 
@@ -61,6 +69,10 @@ Next, we’ll apply some basic styles for browsers that don’t yet support CSS 
 ```
 
 ## Using CSS Grid
+
+<aside>
+  <p><a href="https://www.w3.org/TR/css-conditional-3/#at-supports" target="_blank" aria-label="Learn more about the @supports query">Learn more</a> about the <code>@supports</code> query.</p>
+</aside>
 
 Now, let's progressively enhance for browsers that *do* support CSS grid using a `@supports` query:
 
@@ -74,10 +86,7 @@ Now, let's progressively enhance for browsers that *do* support CSS grid using a
 }
 ```
 
-<Figure
-  caption="A basic twelve-column grid."
-  wide={true}
->
+<Figure caption="A basic twelve-column grid.">
   <GridLayout1 />
 </Figure>
 
@@ -99,7 +108,6 @@ Now it’s time to start placing content on the grid:
 
 <Figure
   caption="The post header and content placed on the grid. Each post child implicitly creates a new grid row."
-  wide={true}
 >
   <GridLayout2 />
 </Figure>
@@ -120,12 +128,11 @@ The post header and content now sit next to each other in a row. The callouts ar
 
 <Figure
   caption="The aside element positioned on the grid."
-  wide={true}
 >
   <GridLayout3 />
 </Figure>
 
-The asides are now pulled to the left of the paragraph immediately following them, looking exactly like callouts. The paragraphs within each callout have `absolute` positioning applied so that they don't force the proceeding paragraph down if they are taller than the adjacent content.
+The asides are now pulled to the left of the paragraph immediately following them, looking exactly like callouts. The paragraphs within each callout have absolute positioning applied so that they don't force the proceeding paragraph down if they are taller than the adjacent content.
 
 ## Bonus: Full-Width Figures
 
@@ -153,7 +160,6 @@ I can easily style figures within the post so that they stretch across the full 
 
 <Figure
   caption="A full-width figure, retaining a narrow figcaption."
-  wide={true}
 >
   <GridLayout4 />
 </Figure>
